[package]
name             = "swe-edge-runtime-http"
version          = "0.3.9"
edition          = "2021"
license          = "MIT OR Apache-2.0"
rust-version     = "1.95"
authors          = ["SWE Engineering Labs"]
repository       = "https://github.com/sweengineeringlabs/edge-runtime"
description      = "HTTP ingress/egress contracts — traits and value types only, no transport dependencies"
keywords         = ["http", "ingress", "contracts", "async", "swe"]
categories       = ["network-programming", "asynchronous"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "http-runtime"

[lib]
name = "swe_edge_runtime_http"
path = "main/src/lib.rs"

[dependencies]
edge-domain = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.9.0", features = ["security"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"

[[example]]
name = "noop_ingress"
path = "examples/noop_ingress.rs"

[dev-dependencies]
futures     = "0.3"
edge-domain = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.9.0", features = ["security"] }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
