[workspace]
resolver = "2"

[workspace.dependencies]
swe-edge-configbuilder          = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git",  tag = "v0.4.1" }
swe-edge-message-broker         = { git = "https://github.com/sweengineeringlabs/edge-message-broker.git", tag = "v0.3.2" }
swe-edge-observ-config          = { git = "https://github.com/sweengineeringlabs/edge-observ-config.git",  tag = "v0.2.1" }
swe-edge-runtime-cli            = { path = "../../cli/scm" }
swe-edge-runtime-grpc           = { path = "../../grpc/scm" }
swe-edge-runtime-http           = { path = "../../http/scm" }
swe-edge-runtime-message-broker = { path = "../../message-broker/scm", features = ["tokio-rt"] }
swe-edge-egress-subprocess      = { path = "../../../../egress/subprocess/scm/subprocess" }

edge-domain                      = { git = "https://github.com/sweengineeringlabs/edge-domain.git",             tag = "v0.8.31", features = ["security"] }
edge-proxy                       = { git = "https://github.com/sweengineeringlabs/edge-proxy.git",              tag = "v0.3.2" }
swe-edge-ingress-http            = { package = "swe-edge-ingress-http-transport",  git = "https://github.com/sweengineeringlabs/edge-ingress-http.git",      tag = "v0.4.6" }
swe-edge-ingress-grpc            = { package = "swe-edge-ingress-grpc-transport",  git = "https://github.com/sweengineeringlabs/edge-ingress-grpc.git",      tag = "v0.5.6" }
swe-edge-ingress-grpc-reflection = { git = "https://github.com/sweengineeringlabs/edge-ingress-grpc.git",                                                   tag = "v0.5.6" }
swe-edge-ingress-verifier        = { git = "https://github.com/sweengineeringlabs/edge-ingress-security.git",                                               tag = "v0.6.2" }
swe-edge-egress-grpc             = { package = "swe-edge-egress-grpc-transport",   git = "https://github.com/sweengineeringlabs/edge-egress-grpc.git",       tag = "v0.4.4" }
swe-edge-egress-http             = { package = "swe-edge-egress-http-transport",   git = "https://github.com/sweengineeringlabs/edge-egress-http.git",       tag = "v0.4.1" }
swe-observ-metrics               = { package = "swe_justobserv_metrics",           git = "ssh://git@github.com/sweengineeringlabs/justobserv.git",           tag = "v0.2.1" }

[package]
name         = "swe-edge-runtime-server"
version      = "0.3.9"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-runtime"
description  = "edge — process-level runtime: wires ingress + proxy + domain + egress, lifecycle, and systemd notify."
keywords     = ["daemon", "runtime", "lifecycle", "systemd", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "runtime"

[lib]
name = "swe_edge_runtime"
path = "main/src/lib.rs"

[[example]]
name = "hello-cli"
path = "examples/hello-cli/main.rs"
required-features = ["cli"]

[[example]]
name = "handler-cli"
path = "examples/handler-cli/main.rs"
required-features = ["cli"]

[features]
default        = []
observability  = ["dep:tracing-subscriber", "swe-edge-observ-config/observability"]
message-broker = ["dep:swe-edge-runtime-message-broker"]
subprocess     = ["dep:swe-edge-egress-subprocess"]
cli            = ["dep:swe-edge-runtime-cli"]
http           = ["dep:swe-edge-runtime-http"]
grpc           = ["dep:swe-edge-runtime-grpc"]

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
futures      = "0.3"
async-trait  = "0.1"
tokio        = { version = "1.52", features = ["rt-multi-thread", "sync", "signal", "macros", "time", "net"] }
tracing      = { version = "0.1", default-features = false }
parking_lot  = "0.12"
toml         = "0.8"
dirs         = "6"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }

swe-edge-configbuilder          = { workspace = true }
swe-edge-observ-config          = { workspace = true }

swe-edge-runtime-cli            = { workspace = true, optional = true }
swe-edge-runtime-grpc           = { workspace = true, optional = true }
swe-edge-runtime-http           = { workspace = true, optional = true }
swe-edge-runtime-message-broker = { workspace = true, optional = true }
swe-edge-egress-subprocess      = { workspace = true, optional = true }

edge-proxy                       = { workspace = true }
swe-edge-ingress-http            = { workspace = true }
swe-edge-ingress-grpc            = { workspace = true }
swe-edge-egress-grpc             = { workspace = true }
swe-edge-egress-http             = { workspace = true }
swe-edge-ingress-verifier        = { workspace = true }
swe-edge-ingress-grpc-reflection = { workspace = true }
edge-domain                      = { workspace = true }
swe-observ-metrics               = { workspace = true }

[dev-dependencies]
swe-edge-runtime-cli            = { workspace = true }
swe-edge-runtime-grpc           = { workspace = true }
swe-edge-runtime-http           = { workspace = true }
swe-edge-runtime-message-broker = { workspace = true }
swe-edge-egress-subprocess      = { workspace = true }
swe-edge-configbuilder          = { workspace = true }
async-trait  = "0.1"
tokio        = { version = "1.52", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile     = "3"
swe-edge-observ-config          = { workspace = true }
reqwest      = { version = "0.12", features = ["json"], default-features = false }
edge-proxy            = { workspace = true }
swe-edge-ingress-http = { workspace = true }
swe-edge-ingress-grpc = { workspace = true }
swe-edge-egress-grpc  = { workspace = true }
swe-edge-egress-http  = { workspace = true }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
