[package]
name         = "swe-edge-runtime-server"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — process-level runtime: wires ingress + proxy + domain + egress, lifecycle, and systemd notify."
keywords     = ["daemon", "runtime", "lifecycle", "systemd", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "runtime"

[lib]
name = "swe_edge_runtime"
path = "main/src/lib.rs"

[[example]]
name = "hello-cli"
path = "../examples/hello-cli/main.rs"
required-features = ["cli"]

[[example]]
name = "handler-cli"
path = "../examples/handler-cli/main.rs"
required-features = ["cli"]

[features]
default = []
observability  = ["dep:tracing-subscriber", "swe-edge-observ-config/observability"]
message-broker = ["dep:swe-edge-runtime-message-broker"]
subprocess     = ["dep:swe-edge-egress-subprocess"]
cli            = ["dep:swe-edge-runtime-cli"]
http           = ["dep:swe-edge-runtime-http"]
grpc           = ["dep:swe-edge-runtime-grpc"]

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
futures      = "0.3"
async-trait  = "0.1"
tokio        = { version = "1.52", features = ["rt-multi-thread", "sync", "signal", "macros", "time", "net"] }
tracing      = { version = "0.1", default-features = false }
parking_lot  = "0.12"
toml        = "0.8"
dirs        = "6"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }

swe-edge-configbuilder          = { workspace = true }
swe-edge-observ-config          = { workspace = true }

swe-edge-runtime-cli            = { workspace = true, optional = true }
swe-edge-runtime-grpc           = { workspace = true, optional = true }
swe-edge-runtime-http           = { workspace = true, optional = true }
swe-edge-runtime-message-broker = { workspace = true, optional = true }
swe-edge-egress-subprocess      = { workspace = true, optional = true }

edge-proxy                       = { workspace = true }
swe-edge-ingress-http            = { workspace = true }
swe-edge-ingress-grpc            = { workspace = true }
swe-edge-egress-grpc             = { workspace = true }
swe-edge-egress-http             = { workspace = true }
swe-edge-ingress-verifier        = { workspace = true }
swe-edge-ingress-grpc-reflection = { workspace = true }
edge-domain                      = { workspace = true }
swe-observ-metrics               = { workspace = true }

[dev-dependencies]
swe-edge-runtime-cli            = { workspace = true }
swe-edge-runtime-grpc           = { workspace = true }
swe-edge-runtime-http           = { workspace = true }
swe-edge-runtime-message-broker = { workspace = true }
swe-edge-egress-subprocess      = { workspace = true }
swe-edge-configbuilder          = { workspace = true }
async-trait  = "0.1"
tokio        = { version = "1.52", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile     = "3"
swe-edge-observ-config          = { workspace = true }
reqwest      = { version = "0.12", features = ["json"], default-features = false }
edge-proxy            = { workspace = true }
swe-edge-ingress-http = { workspace = true }
swe-edge-ingress-grpc = { workspace = true }
swe-edge-egress-grpc  = { workspace = true }
swe-edge-egress-http  = { workspace = true }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
