[package]
name         = "swe-edge-runtime-actor"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — actor: encapsulated state machine with tell/ask semantics and optional lifecycle management."
keywords     = ["actor", "async", "message-passing", "encapsulated-state", "swe"]
categories   = ["asynchronous", "concurrency"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "actor"

[lib]
name = "swe_edge_runtime_actor"
path = "src/lib.rs"

[features]
default   = ["tokio-rt"]
tokio-rt  = ["dep:tokio"]
async-std-rt = ["dep:async-std"]

[dependencies]
futures              = "0.3"
thiserror            = "1.0"
tracing              = { version = "0.1", default-features = false }
tokio                = { version = "1.0", features = ["sync", "rt"], optional = true }
async-std            = { version = "1.12", features = ["attributes"], optional = true }
swe-edge-configbuilder = { path = "../../../../configbuilder/main/features/configbuilder" }

[dev-dependencies]
tokio     = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-std = { version = "1.12", features = ["attributes"] }
futures   = "0.3"
bytes     = "1"

[[test]]
name = "actor_int_test"
path = "tests/actor_int_test.rs"

[[test]]
name = "edge_saf_int_test"
path = "tests/edge_saf_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[example]]
name = "counter_actor"
path = "examples/counter_actor.rs"

[lints]
workspace = true
