[package]
name         = "swe-edge-runtime-actor"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — actor: encapsulated state machine with tell/ask semantics and optional lifecycle management."
keywords     = ["actor", "async", "message-passing", "encapsulated-state", "swe"]
categories   = ["asynchronous", "concurrency"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "actor"

[lib]
name = "swe_edge_runtime_actor"
path = "src/lib.rs"

[features]
default   = ["tokio-rt"]
tokio-rt  = ["dep:tokio"]
async-std-rt = ["dep:async-std"]

[dependencies]
futures              = "0.3"
thiserror            = "1.0"
tracing              = { version = "0.1", default-features = false }
tokio                = { version = "1.0", features = ["sync", "rt"], optional = true }
async-std            = { version = "1.12", features = ["attributes"], optional = true }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
tokio     = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
async-std = { version = "1.12", features = ["attributes"] }
futures   = "0.3"
bytes     = "1"

[[test]]
name = "actor_int_test"
path = "tests/actor_int_test.rs"

[[test]]
name = "edge_saf_int_test"
path = "tests/edge_saf_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "actor_svc_int_test"
path = "tests/actor_svc_int_test.rs"

[[test]]
name = "async_std_actor_int_test"
path = "tests/async_std_actor_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "actor_handle_int_test"
path = "tests/actor_handle_int_test.rs"

[[test]]
name = "stop_handle_int_test"
path = "tests/stop_handle_int_test.rs"

[[test]]
name = "mailbox_error_int_test"
path = "tests/mailbox_error_int_test.rs"

[[test]]
name = "actor_context_int_test"
path = "tests/actor_context_int_test.rs"

[[test]]
name = "actor_runtime_int_test"
path = "tests/actor_runtime_int_test.rs"

[[test]]
name = "message_int_test"
path = "tests/message_int_test.rs"

[[test]]
name = "spi_security_test"
path = "tests/spi_security_test.rs"

[[test]]
name = "actor_spawn_handle_int_test"
path = "tests/actor_spawn_handle_int_test.rs"

[[example]]
name = "counter_actor"
path = "examples/counter_actor.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
