[package]
name         = "swe-edge-runtime-isolator"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — runtime OS-level process isolation profiles (ADR-004)."
keywords     = ["isolator", "seccomp", "sandbox", "runtime", "swe"]
categories   = ["os"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "isolator"

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[features]
default = []
seccomp = ["dep:seccompiler"]

[dependencies]
serde   = { version = "1.0", features = ["derive"] }
tokio   = { version = "1.0", features = ["process"] }

swe-edge-configbuilder  = { path = "../../../../configbuilder/main/features/configbuilder" }
swe-edge-egress-subprocess = { path = "../../../../egress/subprocess/main/features/subprocess" }

[target.'cfg(target_os = "linux")'.dependencies]
libc        = "0.2"
seccompiler = { version = "0.4", optional = true }

[dev-dependencies]
toml  = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
