[package]
name         = "swe-edge-runtime-resource-policy"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — config-driven resource limits for subprocess execution (ADR-005)."
keywords     = ["resource", "policy", "subprocess", "runtime", "swe"]
categories   = ["os"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "resource-policy"

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio     = { version = "1.0", features = ["process"] }

swe-edge-configbuilder = { path = "../../../../configbuilder/main/features/configbuilder" }
swe-edge-egress-subprocess = { path = "../../../../egress/subprocess/main/features/subprocess" }

[dev-dependencies]
toml  = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
