[package]
name         = "swe-edge-runtime-scheduler"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — async scheduler: runtime-agnostic Scheduler trait plus an optional tokio-backed implementation."
keywords     = ["scheduler", "runtime", "tokio", "executor", "swe"]
categories   = ["network-programming", "asynchronous"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "scheduler"

[lib]
name = "swe_edge_runtime_scheduler"
path = "src/lib.rs"

[features]
default  = ["tokio-rt"]
tokio-rt = ["dep:tokio", "dep:serde"]

[dependencies]
thiserror            = "2"
tracing              = { version = "0.1", default-features = false }
tokio                = { version = "1.0", features = ["rt-multi-thread", "signal", "sync", "time", "macros"], optional = true }
serde                = { version = "1.0", features = ["derive"], optional = true }
swe-edge-configbuilder  = { path = "../../../../configbuilder/main/features/configbuilder" }

[dev-dependencies]
async-trait = "0.1"
edge-domain = { path = "../../../../domain" }
toml        = "0.8"
futures     = "0.3"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[lints]
workspace = true
