[package]
name         = "swe-edge-runtime-message-broker"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — message broker: runtime-agnostic MessageBroker trait with in-memory, NATS, and Kafka backends."
keywords     = ["message-broker", "pubsub", "nats", "async", "swe"]
categories   = ["network-programming", "asynchronous"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "message-broker"

[lib]
name = "swe_edge_runtime_message_broker"
path = "main/src/lib.rs"

[features]
default  = []
tokio-rt = ["dep:tokio"]
nats     = ["dep:async-nats", "dep:tokio"]
kafka    = ["dep:rdkafka", "dep:tokio"]

[dependencies]
bytes           = "1"
futures         = "0.3"
thiserror       = "2.0"
tracing         = { version = "0.1", default-features = false }
tokio           = { version = "1.52", features = ["sync", "rt", "time"], optional = true }
async-nats      = { version = "0.49", optional = true }
rdkafka         = { version = "0.39", features = ["tokio", "cmake-build"], optional = true }
uuid            = { version = "1.23", features = ["v4"] }
serde           = { version = "1.0", features = ["derive"] }
swe-edge-message-broker.workspace = true
swe-edge-configbuilder.workspace = true

[dev-dependencies]
tokio      = { version = "1.52", features = ["rt-multi-thread", "macros"] }
futures    = "0.3"
bytes      = "1"
async-nats = { version = "0.49" }
# Unconditional dev dep so rdkafka_int_test.rs can import rdkafka directly
# without requiring the kafka feature, satisfying arch rule 95 (dep test coverage).
rdkafka    = { version = "0.39", features = ["tokio", "cmake-build"] }

[[example]]
name = "in_memory_broker"
path = "examples/in_memory_broker.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
